Need to fix spacing on resume page

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -22,13 +22,14 @@ header {
     text-decoration: underline;
 }
 
+
 /* center container in the middle */
 /* Code for making card layout. */
-
 html {
   min-height: 100%;
   overflow: scroll; 
 }
+
 
 body {
   font-family: 'Lato', sans-serif; 
@@ -53,26 +54,31 @@ body {
 
 .container {
     position: relative;
-    margin: auto;
     overflow: hidden;
     width: 520px;
     height: 350px;
     background: white;
     margin: 30px; 
-    border-radius: 10px;
-    border-color: black; 
+    border-radius: 5px;
+    border-color: #cccccc;
+    border-width: 0.01px;
     border-style: solid; 
-    border-width: 0.2px; 
 } 
 
+
+.container:hover {
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.15);
+}
+
 p {
-  font-size: 0.6em;
+  font-size: 12px;
+  font-weight: 300; 
   color: black;
-  letter-spacing: 1px;
 }
 
 h1 {
-  font-size: 1.2em;
+  font-size: 18px;
+  font-weight: 600; 
   color: black;
   margin-top: -5px;
 }
@@ -100,35 +106,33 @@ img {
   text-transform: none;
   letter-spacing: 0;
   margin-bottom: 17px;
+  font-weight: 300; 
   color: black;
-  font-size: .7em;
-  line-height: 1.6em;
+  font-size: 12px;
   margin-right: 25px;
   text-align: justify;
 }
 
-.pick {
-  margin-top: 11px;
-  margin-bottom:0;
-  margin-left: 20px;
-}
-
 .technologies {
-    display: grid;
     color: black;
-    grid-template-columns: repeat(auto-fill, 50px);
-    width: 60%;
-    grid-gap: 4px;
-    margin-left: 20px;
+    grid-template-columns: repeat(auto-fill);
+    grid-gap: 5px;
+    margin-left: 10px;
     margin-top: 5px;
 }
 
 .tech {
-    padding: 5px;
-    border: 1px solid black;
-    border-radius: 5px; 
+    padding: 5px 10px 5px 10px; 
+    background-color:#f5f5f5; 
+    background-color: #E4E2E2;
+    background-color: #F3F2F2;
+    color: black; 
+    border-radius: 15px; 
     font-size: 11px;
+    font-weight: 300;
     text-align: center;
+    width:fit-content;
 }
+
 
 
